Initial Commit on Reset Password

--- a/backend/springboot/Backend/src/main/resources/application.properties
+++ b/backend/springboot/Backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/merkatodb?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Betamturu
+spring.datasource.password=root
 
 
 spring.security.auto-configuration.disable-login-page=true
@@ -25,3 +25,13 @@ spring.mail.defaultEncoding=UTF-8
 spring.mail.properties.mail.smtp.socketFactory.port = 25
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.smtp.socketFactory.fallback = true
+
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=futurebproject06@gmail.com
+#spring.mail.password=wvjr tmpf gtad tanp
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.ssl.enable=false
+#spring.mail.defaultEncoding=UTF-8
+
