--- a/backend/springboot/Backend/src/main/resources/application.properties
+++ b/backend/springboot/Backend/src/main/resources/application.properties
@@ -25,6 +25,8 @@ spring.mail.defaultEncoding=UTF-8
 spring.mail.properties.mail.smtp.socketFactory.port = 25
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.smtp.socketFactory.fallback = true
+spring.mail.properties.mail.smtp.connectiontimeout=2000
+
 
 #spring.mail.host=smtp.gmail.com
 #spring.mail.port=587
