--- a/backend/springboot/Backend/src/main/resources/application.properties
+++ b/backend/springboot/Backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/merkatodb?createDatabaseIfNotExist=true
-spring.datasource.username=Musie
-spring.datasource.password=Musie1234
+spring.datasource.username=Markata
+spring.datasource.password=Markata
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
