--- a/backend/springboot/Backend/src/main/resources/application.properties
+++ b/backend/springboot/Backend/src/main/resources/application.properties
@@ -9,10 +9,11 @@ spring.security.auto-configuration.disable-login-page=true
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.sql.init.mode= always
+
+#spring.sql.init.mode= always
 
 
 
