--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ node_modules
 .env.test.local
 .env.production.local
 
+# intellij .idea config
+.idea/
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
