--- a/backend/springboot/Backend/pom.xml
+++ b/backend/springboot/Backend/pom.xml
@@ -140,8 +140,13 @@
 			<version>2.2.224</version>
 			<scope>test</scope>
 		</dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.javiersc.logger</groupId>-->
+<!--            <artifactId>logger</artifactId>-->
+<!--            <version>0.12.0</version>-->
+<!--        </dependency>-->
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
