--- a/backend/springboot/Backend/src/main/resources/application.properties
+++ b/backend/springboot/Backend/src/main/resources/application.properties
@@ -10,13 +10,13 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 #spring.sql.init.mode= always
 
 
 
-#logging.level.root=error
+logging.level.root=debug
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
