--- a/backend/springboot/Backend/src/main/resources/application.properties
+++ b/backend/springboot/Backend/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 
-logging.level.root=debug
+#logging.level.root=debug
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
